--- a/UniversityStats/UniversityStats.Client/Ui/Layout/MainLayout.razor
+++ b/UniversityStats/UniversityStats.Client/Ui/Layout/MainLayout.razor
@@ -1,4 +1,4 @@
-﻿@inherits LayoutComponentBase
+@inherits LayoutComponentBase
 <div class="page">
     <div class="sidebar">
         <NavMenu />
@@ -6,7 +6,7 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://github.com/vieKH" target="_blank">About me</a>
+            <a href="https://github.com/Pancake2021" target="_blank">About me</a>
         </div>
 
         <article class="content px-4">
